--- a/index.html
+++ b/index.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>个人介绍</title>
+    <title>个人主页</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         body {
             background-color: #f5f5f5;
             margin: 0;
             padding: 0;
+            font-family: Arial, sans-serif;
             display: flex;
             justify-content: center;
             align-items: center;
-            min-height: 100vh;
-            font-family: Arial, sans-serif;
+            height: 100vh;
         }
 
         .container {
@@ -100,7 +101,7 @@
 
         .social-btns a {
             display: inline-block;
-            margin-right: 50px;
+            margin-right: 4vw;
             width: 30px;
             height: 30px;
             animation: pulse 1s infinite;
@@ -119,6 +120,17 @@
             }
             100% {
                 transform: scale(1);
+            }
+        }
+
+        /* 媒体查询 */
+        @media only screen and (max-width: 600px) {
+            .container {
+                max-width: 100%;
+                padding: 20px;
+            }
+            .social-btns a {
+                margin-right: 6vw;
             }
         }
     </style>
